--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -15,8 +14,7 @@
 </head>
 <body>
   <div class=" position-relative" id="background">
-    <div class="text-center display-2 text-white pt-1" style="font-family: 'Source Sans Pro', sans-serif;
-font-family: 'Dancing Script', cursive;"> Recommeder System </div>
+    <div class="text-center display-2 text-white pt-1" style="font-family: 'Source Sans Pro', sans-serif; font-family: 'Dancing Script', cursive;"> Recommender System </div>
     <div class="input-group mb-3 position-absolute col-md-4" style="top:50%;left:50%;transform:translate(-50%,-50%)">
       <input type="text" class="form-control " placeholder="Mời nhập UserID" aria-label="Recipient's username" aria-describedby="basic-addon2">
       <div class="input-group-append">
@@ -24,139 +22,16 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
       </div>
     </div>
   </div>
+
+
   <div class="recommend">
     <div class="fontsize text-uppercase pb-5 font-weight-bold pl-5" >Có thể bạn quan tâm</div>
-    <div class="pb-5 col-md-12 text-center">
 
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="pb-5 col-md-12 text-center">
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-
-      <div class="card d-inline-block mr-4" style="width: 12rem; ">
-        <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-         class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <div class="card-text font-weight-bold">Đạo diễn:</div>
-          <div class="card-text font-weight-bold">Diễn viên:</div>
-          <div class="card-text font-weight-bold">Thể loại:</div>
-          <div class="card-text ">Trung bình đánh giá:</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="carouselExampleIndicators" class="carousel slide pl-5 pr-5 col-lg-8 mx-auto" data-ride="carousel">
+  <div class="recommend">
+  <div id="carouselExampleIndicators" class="carousel slide pl-5 pr-5 col-md-11 mx-auto pb-5" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active w-100">
-        <div class="card d-inline-block w-25 pl-3 pr-3">
+      <div class="carousel-item active w-100 text-center ">
+        <div class="card d-inline-block mr-4 " style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -166,7 +41,7 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -176,7 +51,7 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -186,50 +61,7 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item w-100">
-        <div class="card d-inline-block w-25 pl-3 pr-3">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block " style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -241,8 +73,9 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
           </div>
         </div>
       </div>
-      <div class="carousel-item w-100">
-        <div class="card d-inline-block w-25 pl-3 pr-3">
+
+      <div class="carousel-item w-100 text-center">
+        <div class="card d-inline-block  mr-4" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -252,7 +85,7 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -262,7 +95,7 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -272,7 +105,51 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
             <div class="card-text font-weight-bold">Thể loại:</div>
             <div class="card-text ">Trung bình đánh giá:</div>
           </div>
-        </div><div class="card d-inline-block w-25 pl-3 pr-3">
+        </div><div class="card d-inline-block " style="width: 16rem; ">
+          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
+           class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div class="card-text font-weight-bold">Đạo diễn:</div>
+            <div class="card-text font-weight-bold">Diễn viên:</div>
+            <div class="card-text font-weight-bold">Thể loại:</div>
+            <div class="card-text ">Trung bình đánh giá:</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="carousel-item w-100 text-center">
+        <div class="card d-inline-block  mr-4" style="width: 16rem; ">
+          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
+           class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div class="card-text font-weight-bold">Đạo diễn:</div>
+            <div class="card-text font-weight-bold">Diễn viên:</div>
+            <div class="card-text font-weight-bold">Thể loại:</div>
+            <div class="card-text ">Trung bình đánh giá:</div>
+          </div>
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
+          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
+           class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div class="card-text font-weight-bold">Đạo diễn:</div>
+            <div class="card-text font-weight-bold">Diễn viên:</div>
+            <div class="card-text font-weight-bold">Thể loại:</div>
+            <div class="card-text ">Trung bình đánh giá:</div>
+          </div>
+        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
+          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
+           class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <div class="card-text font-weight-bold">Đạo diễn:</div>
+            <div class="card-text font-weight-bold">Diễn viên:</div>
+            <div class="card-text font-weight-bold">Thể loại:</div>
+            <div class="card-text ">Trung bình đánh giá:</div>
+          </div>
+        </div><div class="card d-inline-block" style="width: 16rem; ">
           <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
            class="card-img-top" alt="...">
           <div class="card-body">
@@ -296,5 +173,14 @@ font-family: 'Dancing Script', cursive;"> Recommeder System </div>
       </div>
     </a>
   </div>
+  </div>
+
+<script>
+  $(function(){
+    $.getJSON("http://127.0.0.1:5000/out", function(data){
+      console.log(data);
+    });
+  });
+</script>
 </body>
 </html>
