--- a/index.html
+++ b/index.html
@@ -177,26 +177,58 @@
 
 <script>
   $(function(){
-    var phim = [];
-    $.getJSON("http://127.0.0.1:5000/out", function(data){
-      console.log(data);
-      $.map(data, function(v){
-        var check = $.grep(phim,function(v){
-          return v == phim.title
-        });
-        console.log(check.length);
-        // if ( check.length == 0 )
-        //   phim.push({
-        //     "title" : v[0],
-        //     "director" : v[1],
-        //     "stars" :v[2],
-        //     "category" : v[3],
-        //     "rating" : v[4],
-        //   });
-        // else
-        //   phim.
+    var phim = [],
+        check = [],
+        category = "",
+        director = "",
+        rating = "",
+        title = "",
+        stars = "",
+        data = [["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Action", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Adventure", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Romance", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Sci-Fi", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Thriller", 4.4], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "Crime", 4.2], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "Drama", 4.2], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "War", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Action", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Drama", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Romance", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Sci-Fi", 4.2], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Action", 4.3], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Crime", 4.3], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Drama", 4.3], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Action", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Adventure", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Romance", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Sci-Fi", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Thriller", 4.0], ["Indiana Jones Va Chiec Ruong Thanh Tich", "Steven Spielberg", "Harrison Ford, Karen Allen, Paul Freeman", "Action", 4.3], ["Indiana Jones Va Chiec Ruong Thanh Tich", "Steven Spielberg", "Harrison Ford, Karen Allen, Paul Freeman", "Adventure", 4.3], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Animation", 3.9], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Children", 3.9], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Comedy", 3.9], ["Su Im Lang Cua Bay Cuu", "Jonathan Demme", "Jodie Foster, Anthony Hopkins, Lawrence A. Bonney", "Drama", 4.3], ["Su Im Lang Cua Bay Cuu", "Jonathan Demme", "Jodie Foster, Anthony Hopkins, Lawrence A. Bonney", "War", 4.3], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Drama", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Romance", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Sci-Fi", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Western", 3.7], ["Pulp Fiction", "Quentin Tarantino", "John Travolta, Uma Thurman, Samuel L. Jackson", "Crime", 4.1], ["Pulp Fiction", "Quentin Tarantino", "John Travolta, Uma Thurman, Samuel L. Jackson", "Drama", 4.1]];
+    data.push(["a"]);
+    console.log(data);
+    $.map(data, function(v,i){
+      var checktt = $.grep(check, function(n){
+        return n == v[0];
       });
+      if (checktt.length == 1){
+        category += ","+ v[3];
+        director = v[1];
+        rating = v[4];
+        title = v[0];
+        stars = v[2];
+      }
+      else {
+        if (check.length == 0 ){
+          check.push(v[0]);
+          category = v[3];
+          director = v[1];
+          rating = v[4];
+          title = v[0];
+          stars = v[2];
+        }
+        else{
+          phim.push({
+            "title" : title,
+            "director" : director,
+            "stars" : stars,
+            "category" : category,
+            "rating" : rating,
+          });
+          check.push(v[0]);
+          category = v[3];
+          director = v[1];
+          rating = v[4];
+          title = v[0];
+          stars = v[2];
+        }
+      }
     });
+    console.log(phim)
+    // var checktt = $.grep(data[0],function(n){
+    //   return n == "Star Wars";
+    // });
+    // console.log(checktt);
   });
 </script>
 </body>
