--- a/index.html
+++ b/index.html
@@ -30,137 +30,6 @@
   <div class="recommend">
   <div id="carouselExampleIndicators" class="carousel slide pl-5 pr-5 col-md-11 mx-auto pb-5" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active w-100 text-center ">
-        <div class="card d-inline-block mr-4 " style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block " style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item w-100 text-center">
-        <div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block " style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="carousel-item w-100 text-center">
-        <div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block  mr-4" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div><div class="card d-inline-block" style="width: 16rem; ">
-          <img src="http://image.phimmoi.net/film/8163/poster.medium.jpg"
-           class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <div class="card-text font-weight-bold">Đạo diễn:</div>
-            <div class="card-text font-weight-bold">Diễn viên:</div>
-            <div class="card-text font-weight-bold">Thể loại:</div>
-            <div class="card-text ">Trung bình đánh giá:</div>
-          </div>
-        </div>
-      </div>
     </div>
     <a class="bg-primary position-absolute" style="top:50%; left: 0; transform: translateY(50%)" href="#carouselExampleIndicators" role="button" data-slide="prev">
       <div class="btn bg-primary text-light">
@@ -178,57 +47,72 @@
 <script>
   $(function(){
     var phim = [],
+        i = 0,
         check = [],
         category = "",
         director = "",
         rating = "",
         title = "",
-        stars = "",
-        data = [["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Action", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Adventure", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Romance", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Sci-Fi", 4.4], ["Star Wars", "George Lucas", "Mark Hamill, Harrison Ford, Carrie Fisher", "Thriller", 4.4], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "Crime", 4.2], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "Drama", 4.2], ["Fargo", "Joel Coen, Ethan Coen", "William H. Macy, Frances McDormand, Steve Buscemi", "War", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Action", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Drama", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Romance", 4.2], ["Titanic", "James Cameron", "Leonardo DiCaprio, Kate Winslet, Billy Zane", "Sci-Fi", 4.2], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Action", 4.3], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Crime", 4.3], ["Bo Gia", "Francis Ford Coppola", "Marlon Brando, Al Pacino, James Caan", "Drama", 4.3], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Action", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Adventure", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Romance", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Sci-Fi", 4.0], ["Star Wars: Episode VI - Return of the Jedi", "Richard Marquand", "Mark Hamill, Harrison Ford, Carrie Fisher", "Thriller", 4.0], ["Indiana Jones Va Chiec Ruong Thanh Tich", "Steven Spielberg", "Harrison Ford, Karen Allen, Paul Freeman", "Action", 4.3], ["Indiana Jones Va Chiec Ruong Thanh Tich", "Steven Spielberg", "Harrison Ford, Karen Allen, Paul Freeman", "Adventure", 4.3], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Animation", 3.9], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Children", 3.9], ["Cau Chuyen Do Choi", "John Lasseter", "Tom Hanks, Tim Allen, Don Rickles", "Comedy", 3.9], ["Su Im Lang Cua Bay Cuu", "Jonathan Demme", "Jodie Foster, Anthony Hopkins, Lawrence A. Bonney", "Drama", 4.3], ["Su Im Lang Cua Bay Cuu", "Jonathan Demme", "Jodie Foster, Anthony Hopkins, Lawrence A. Bonney", "War", 4.3], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Drama", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Romance", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Sci-Fi", 3.7], ["The English Patient", "Anthony Minghella", "Ralph Fiennes, Juliette Binoche, Willem Dafoe", "Western", 3.7], ["Pulp Fiction", "Quentin Tarantino", "John Travolta, Uma Thurman, Samuel L. Jackson", "Crime", 4.1], ["Pulp Fiction", "Quentin Tarantino", "John Travolta, Uma Thurman, Samuel L. Jackson", "Drama", 4.1]];
-    data.push(["a"]);
-    console.log(data);
-    $.map(data, function(v,i){
-      var checktt = $.grep(check, function(n){
-        return n == v[0];
+        stars = "";
+    $.getJSON("127.0.0.1:5000/out" ,function(data){
+      data.push(["a"]);
+      $.map(data, function(v,i){
+        var checktt = $.grep(check, function(n){
+          return n == v[0];
+        });
+        if (checktt.length == 1){
+          category += ", "+ v[3];
+          director = v[1];
+          rating = v[4];
+          title = v[0];
+          stars = v[2];
+        }
+        else {
+          if (check.length == 0 ){
+            check.push(v[0]);
+            category = v[3];
+            director = v[1];
+            rating = v[4];
+            title = v[0];
+            stars = v[2];
+          }
+          else{
+            phim.push({
+              "title" : title,
+              "director" : director,
+              "stars" : stars,
+              "category" : category,
+              "rating" : rating,
+            });
+            check.push(v[0]);
+            category = v[3];
+            director = v[1];
+            rating = v[4];
+            title = v[0];
+            stars = v[2];
+          }
+        }
       });
-      if (checktt.length == 1){
-        category += ","+ v[3];
-        director = v[1];
-        rating = v[4];
-        title = v[0];
-        stars = v[2];
-      }
-      else {
-        if (check.length == 0 ){
-          check.push(v[0]);
-          category = v[3];
-          director = v[1];
-          rating = v[4];
-          title = v[0];
-          stars = v[2];
-        }
-        else{
-          phim.push({
-            "title" : title,
-            "director" : director,
-            "stars" : stars,
-            "category" : category,
-            "rating" : rating,
-          });
-          check.push(v[0]);
-          category = v[3];
-          director = v[1];
-          rating = v[4];
-          title = v[0];
-          stars = v[2];
-        }
-      }
     });
-    console.log(phim)
-    // var checktt = $.grep(data[0],function(n){
-    //   return n == "Star Wars";
-    // });
-    // console.log(checktt);
+    for (var i = 0 ; i < 3; i++){
+      $(".carousel-inner").append(
+        $("<div>", { class: "carousel-item w-100 text-center " + ( i == 0 ? "active" : "")}).append(
+          $.map([0,1,2,3], function(v){
+            var n = v +4*i;
+            return $("<div>", { class: "card d-inline-block mr-4"}).css({"width":"16rem"}).append(
+              $("<img>", { src: "http://image.phimmoi.net/film/8163/poster.medium.jpg", class:"card-img-top"}),
+              $("<div>", { class: "card-body"}).append(
+                $("<h5>", { class: "card-title", text: "Phim: " + phim[n].title}),
+                $("<div>", { class: "card-text text-left", text: "- Đạo diễn: " + phim[n].director}),
+                $("<div>", { class: "card-text text-left", text: "- Diễn viên: " + phim[n].stars}),
+                $("<div>", { class: "card-text text-left", text: "- Thể loại: " + phim[n].category}),
+                $("<div>", { class: "card-text text-left", text: "- Trung bình đánh giá: " + phim[n].rating}),
+              ),
+            );
+          }),
+        ),
+      );
+    }
   });
 </script>
 </body>
