--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 <body>
   <div class=" position-relative" id="background">
     <div class="text-center display-2 text-white pt-1" style="font-family: 'Dancing Script';"> Recommender System </div>
-    <!-- <form method="POST"> -->
-    <div class="input-group mb-3 position-absolute col-md-4" style="top:50%;left:50%;transform:translate(-50%,-50%)">
-      <input type="text" class="form-control " name="userID" placeholder="Mời nhập UserID" aria-label="Recipient's username" aria-describedby="basic-addon2">
-      <div class="input-group-append">
-        <button class="btn btn-outline-secondary" id="btnOK" style="color: #f8f9fa" type="button">OK</button>
+    <form method="POST">
+      <div class="input-group mb-3 position-absolute col-md-4" style="top:50%;left:50%;transform:translate(-50%,-50%)">
+        <input type="text" class="form-control " name="userID" placeholder="Mời nhập UserID" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <a class="btn btn-outline-secondary" href="/showData" id="btnOK" style="color: #f8f9fa" role="button">OK</a>
+        </div>
       </div>
-    </div>
-  <!-- </form> -->
+  </form>
   </div>
 
   <div class="recommend">
